# koryta

./: .firebaserc  .gemini.json  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  cypress.config.js  database.rules.json  eslint.config.js  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  snapshots.js  vite.config.mts
data/scrapers/: .coverage  .gitignore  .importlinter  .pytest-runtimes  Gemini.md  README.md  TODO_analysis.md  db.py  db_stats.py  debug_pawel.py  docker-compose.yml  duplicate_check_output.txt  duplicate_check_output_filtered.txt  duplicate_check_output_v2.txt  duplicate_check_output_v3.txt  duplicates_report.txt  duplicates_report_v2.txt  find_adam.py  find_adam_pkw.py  find_teresa.py  indenter.py  ingest.py  kpo.py  kpo_list.py  list_out  migrate_data_from_rtdb.py  package-lock.json  pyproject.toml  quick_check.sh  requirements.txt  run_all_output.txt  run_workers.sh  storage.py  submit_people.sh  util.py
data/scrapers/.agent/: instructions.md
data/scrapers/.agent/skills/koryta-cli/: SKILL.md
data/scrapers/krs/: ingest.py
data/scrapers/scripts/: README.md  decide_awaiting.py  download_wiki.sh  firestore_migrate_fields.py  firestore_stats.py  fix_jsonl.py  migrate_rtdb_to_firestore.py  migrate_rtdb_to_storage.py  update_references.py
data/scrapers/src/: cli.py  conductor.py  crawl.py  crawl_cli.py  koryta.py  main.py  pipelines.py  scraper.py  set_auth_claims.py  uploader.py
data/scrapers/src/analysis/: NER_herbert_stanza.ipynb  People analysis.ipynb  People's regions.ipynb  Stats.ipynb  company_scores.py  error_analysis_koryciarski.py  eval_koryciarski_models.py  extract.py  extract_article_facts.py  extract_articles.py  fetch_koryta_notes.py  generate_domain_selectors.py  graph.py  interesting.py  ldjson_coverage.py  payloads.py  people.py  people_koryta_merged.py  people_krs_merged.py  people_pkw_merged.py  people_wiki_merged.py  postprocess_ner.py  probe_css_selector.py  review_selectors.py  score_koryciarski.py  score_koryciarski_cpu.py  score_koryta_notes.py  scores.py  stats.py  utils.py  validate_domain_selectors.py
data/scrapers/src/analysis/notebooks/: Analyze companies.ipynb  Check people.ipynb  Debug.ipynb  Estimate companies.ipynb  PKW.ipynb  Party analysis.ipynb  Party graph.ipynb  People analysis.ipynb  People's regions.ipynb  README.md  Stats.ipynb  crawling_1M_EDA.html  runner.py
data/scrapers/src/analysis/payloads/: __init__.py  company.py  election.py  person.py  region.py  util.py
data/scrapers/src/analysis/scripts/: field_presence.py
data/scrapers/src/analysis/test/: test_e2e_interesting.py  test_graph.py  test_people_pkw_merged.py  test_people_utils.py  test_pkw_merging.py  test_teryt_filtering.py  test_utils_filtering.py
data/scrapers/src/analysis/tests/: test_extract_krs.py  test_owners_e2e.py  test_scrape_rejestr_io.py
data/scrapers/src/analysis/update_rate/: biuletyn.py  krs_censored.py  shared.py
data/scrapers/src/analysis/utils/: __init__.py  names.py  tables.py
data/scrapers/src/entities/: article.py  company.py  composite.py  crawler.py  facts.py  ner.py  person.py  util.py
data/scrapers/src/entities/tests/: test_article.py  test_company.py  test_crawler.py  test_entities_util.py  test_person.py  test_util.py
data/scrapers/src/frameworks/: conductor.py
data/scrapers/src/scrapers/: stores.py  teryt.py  test_tree.py
data/scrapers/src/scrapers/article/: README.md  compose.yaml  conftest.py  crawl_main.py  crawler.py  db.py  db_test.py  domain_selectors_pipeline.py  done_urls_pipeline.py  extract_example.py  facts_pipeline.py  hostnames.py  koryciarski_scores_pipeline.py  ner_herbert.py  ner_stanza.py  parse.py  parse_html.py  parse_runner.py  parse_test.py  parsed_pipeline.py  pipeline_utils.py  pipelines.py  postgres_queue.py  postgres_queue_test.py  readability_worker.mjs  scoring.py  selectors.py  test_crawl_queue_contract.py  test_parse_selector.py  url_store_queue.py  (+1 more)
data/scrapers/src/scripts/: analyze_rtdb.py  bench_crawl.py  create_revisions.py  extract_rtdb_data.py  firestore_migrate_fields.py  firestore_stats.py  fix_jsonl.py  migrate_rtdb_to_firestore.py  parse_html.py  text_gemini_on_ner.py  update_references.py
data/scrapers/src/stores/: auth.py  conductor.py  config.py  download.py  duckdb.py  file.py  file_extractor.py  firestore.py  llm.py  nlp.py  postgres.py  redis.py  rejestr.py  storage.py  user.py  utils.py  web.py
data/scrapers/src/tests/: conftest.py  test_analysis.py  test_companies_merge.py  test_data.py  test_diff.py  test_extract.py  test_extraction.py  test_indenter.py  test_pipeline_output.py  test_pipelines.py  test_pkw_process.py  test_polish.py  test_stats.py  test_util.py
data/scrapers/src/util/: conductor.py  config.py  dict.py  download.py  firestore.py  http_cache.py  lists.py  polish.py  rejestr.py  teryt.py  url.py
data/scrapers/tests/: Bronisław Geremek.xml  Grupa kapitałowa PWN.xml  Grzegorz Michał Pastuszko.xml  Kopalnia Węgla Kamiennego „Śląsk”.xml  Marcin Chludziński.xml  Miejskie Przedsiębiorstwo Komunikacyjne we Wrocławiu.xml  PERN.xml  Pesa Mińsk Mazowiecki.xml  Pojazdy Szynowe Pesa Bydgoszcz.xml  Polbus-PKS.xml  Polfa Warszawa.xml  Port lotniczy Warszawa-Modlin.xml  Stadion Narodowy im. Kazimierza Górskiego w Warszawie.xml  Telewizja Polska.xml  Warel.xml  psl_lista.txt  stop_pato_lista.txt
data/scrapers/tests/wiki/: Agata (przedsiębiorstwo).xml  Agencja Mienia Wojskowego.xml  Biuro Maklerskie PKO Banku Polskiego.xml  Jan Pamuła (ekonomista).xml  Józef Śliwa.xml  Miejski Zakład Komunikacji w Koninie.xml  Orange Polska.xml  PGE Polska Grupa Energetyczna.xml  Polski Holding Obronny.xml  Stefan Wilkanowicz.xml  Totalizator Sportowy.xml  Wojciech Wróblewski (socjolog).xml  ZE PAK.xml  test_util.py
data/scrapers/util/: firestore.py  rtdb.py  test_util.py
data/scrapers/versioned/: .gitignore  all_krs.txt  analysis.txt  cloud_sync.py  domains.txt  download_wiki.sh  hostname_config.jsonl  koryta.jsonl  matched  pkw.jsonl  psl_lista.txt  request_logs.jsonl  tmpmoveout.py  wikipedia.jsonl
(+985 files in other folders)
