[project]
name = "scrapers"
version = "0.1.0"
description = "Scrapers used for koryta.pl"
authors = [{ name = "Szymon Pajzert", email = "szymonpajzert@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "blis==1.3.0",
    "bs4==0.0.2",
    "CacheControl==0.14.3",
    "cachetools==5.5.2",
    "catalogue==2.0.10",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.3.0",
    "cloudpathlib==0.22.0",
    "confection==0.1.5",
    "cryptography==45.0.5",
    "cymem==2.0.11",
    "dotenv==0.9.9",
    "duckdb==1.4.0",
    "filelock==3.19.1",
    "firebase_admin==7.0.0",
    "fsspec==2025.9.0",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-core==2.4.3",
    "google-cloud-firestore==2.21.0",
    "google-cloud-storage==3.2.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hf-xet==1.1.10",
    "hpack==4.1.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "Jinja2==3.1.6",
    "langcodes==3.5.0",
    "language_data==1.3.0",
    "lxml==6.0.1",
    "marisa-trie==1.3.1",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "murmurhash==1.0.13",
    "networkx==3.5",
    "numpy==2.3.3",
    "packaging==25.0",
    "pluggy==1.6.0",
    "preshed==3.0.10",
    "proto-plus==1.26.1",
    "protobuf==6.32.0rc1",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.9",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "pytest==9.0.1",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "regex==2025.9.18",
    "requests==2.32.4",
    "rich==14.1.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart_open==7.3.1",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "srsly==2.5.1",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "thinc==8.3.6",
    "tqdm==4.67.1",
    "transformers==4.56.1",
    "typer==0.17.4",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "urllib3 (>1.26.0,<2.0.0)",
    "uuid7==0.1.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "webencodings==0.5.1",
    "wrapt==1.17.3",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "memoized-property (>=1.0.3,<2.0.0)",
    "mwparserfromhell (>=0.7.2,<0.8.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "leveldb-export @ git+https://github.com/SzymonPajzert/leveldb-export.git@upgrade",
]

[project.scripts]
# jupyter lab is available as well for analysis
koryta = "main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
ml = [
    '''pl_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_lg-3.8.0/pl_core_news_lg-3.8.0-py3-none-any.whl#sha256=3bc7296cd4d67fa9ee0904b25401b0e9a9a772d5c4756edf54143a2ff4c9dcc0''',
    "beautifulsoup4==4.13.5",
    "seaborn (>=0.13.2,<0.14.0)",
    "tokenizers==0.22.0",
    "torch==2.8.0",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
]


dev = [
    "jupyterlab (>=4.4.9,<5.0.0)",
    "import-linter (>=2.6,<3.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
]
test = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-check (>=2.6.0,<3.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pandas-stubs (>=2.3.3.251201,<3.0.0.0)",
    "types-regex (>=2025.11.3.20251106,<2026.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
    "types-networkx (>=3.6.0.20251127,<4.0.0.0)",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "duckdb",
    "firebase_admin.*",
    "google.*",
    "scipy.*",
    "mwparserfromhell.*",
    "sklearn.*",
    "spacy.*",
    "cloudpathlib.*",
    "pymodulon.*",
    "adjustText.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Add "PL" (Pylint) and "C90" (Complexity) to default rules
select = ["E", "F", "I", "PL", "C90"]
ignore = [
    "PLR2004",
    "PLR0911",
    "PLW2901",
    "PLR0913",
    "PLR0904",
    "PLR0124",
    "PLW0603",
    "PLW0177",
    "PLW0602",
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 5
max-public-methods = 20
max-statements = 50
max-branches = 15

[tool.pytest.ini_options]
markers = ["parametrize_skip_if"]
addopts = "--cov=src --cov-report=term:skip-covered --durations=5"

[tool.importlinter]
root_packages = ["analysis", "stores", "scrapers", "util", "entities"]

exclude_type_checking_imports = true
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Clean architecture"
type = "layers"
layers = ["analysis", "stores", "scrapers", "util", "entities"]

[[tool.importlinter.contracts]]
name = "Do not import external packages"
type = "forbidden"
source_modules = ["scrapers", "util", "entities"]

forbidden_modules = [
    "bz2",
    "csv",
    "duckdb.**",
    "duckdb",
    "firebase_admin.**",
    "firebase_admin",
    "fnmatch",
    "google.**",
    "google",
    "io",
    "os.**",
    "os",
    "shutil",
    "sys.**",
    "sys",
    "tempfile",
    "urllib.**",
    "urllib",
    "zipfile.**",
    "zipfile",
    "zipfile",
]
ignore_imports = [
    "entities.util -> urllib",
    "scrapers.stores -> os",
    "scrapers.stores -> io",
]
