[project]
name = "scrapers"
version = "0.1.0"
description = "Scrapers used for koryta.pl"
authors = [{ name = "Szymon Pajzert", email = "szymonpajzert@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "blis==1.3.3",
    "bs4==0.0.2",
    "CacheControl==0.14.4",
    "cachetools==5.5.2",
    "catalogue==2.0.10",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cloudpathlib==0.24.0",
    "confection==0.1.5",
    "cryptography==45.0.5",
    "cymem==2.0.13",
    "dotenv==0.9.9",
    "duckdb==1.5.3",
    "filelock==3.29.1",
    "firebase_admin==7.4.0",
    "fsspec==2026.4.0",
    "google-api-core==2.31.0",
    "google-auth==2.53.0",
    "google-cloud-core==2.6.0",
    "google-cloud-firestore==2.27.0",
    "google-cloud-storage==3.11.0",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.10.0",
    "googleapis-common-protos==1.75.0",
    "grpcio==1.81.0",
    "grpcio-status==1.80.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.5.0",
    "hpack==4.1.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.0",
    "hyperframe==6.1.0",
    "idna==3.18",
    "iniconfig==2.3.0",
    "Jinja2==3.1.6",
    "langcodes==3.5.1",
    "language_data==1.4.0",
    "lxml==6.1.1",
    "marisa-trie==1.4.1",
    "markdown-it-py==4.2.0",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "murmurhash==1.0.15",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "packaging==26.2",
    "pluggy==1.6.0",
    "preshed==3.0.13",
    "proto-plus==1.28.0",
    "protobuf==6.32.0rc1",
    "pyasn1==0.6.3",
    "pyasn1_modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.9",
    "pydantic_core==2.33.2",
    "Pygments==2.20.0",
    "PyJWT==2.13.0",
    "pytest==9.0.3",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "dateparser (>=1.4.0,<2.0.0)",
    "rich==14.3.4",
    "rsa==4.9.1",
    "safetensors==0.7.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart_open==7.6.1",
    "sniffio==1.3.1",
    "soupsieve==2.8.4",
    "srsly==2.5.3",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "thinc==8.3.6",
    "tqdm==4.68.0",
    "transformers==4.56.1",
    "typer==0.26.7",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3 (>1.26.0,<2.0.0)",
    "uuid7==0.1.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "webencodings==0.5.1",
    "wrapt==2.2.1",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "nbconvert (>=7.17.1,<8.0.0)",
    "memoized-property (>=1.0.3,<2.0.0)",
    "mwparserfromhell (>=0.7.2,<0.8.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "leveldb-export @ git+https://github.com/SzymonPajzert/leveldb-export.git@upgrade",
    "stanza (>=1.11.1,<2.0.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "psycopg[binary] (>=3.0.0,<4.0.0)",
    "psycopg-pool (>=3.0.0,<4.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "pytest-fast-first (>=1.0.5,<2.0.0)",
]

[project.scripts]
# jupyter lab is available as well for analysis
koryta = "koryta:main"
koryta_uploader = "uploader:main"
koryta_pipelines = "pipelines:main"
koryta_crawl = "crawl_cli:main"
koryta_scraper = "scraper:main"
koryta_scrape_krs = "scraper:scrape_krs"
koryta_scrape_krs_updates = "scraper:scrape_updates_by_dates"


[build-system]
requires = ["poetry-core>=2.3.2,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
ml = [
    '''pl_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_lg-3.8.0/pl_core_news_lg-3.8.0-py3-none-any.whl#sha256=3bc7296cd4d67fa9ee0904b25401b0e9a9a772d5c4756edf54143a2ff4c9dcc0''',
    "beautifulsoup4==4.14.3",
    "seaborn (>=0.13.2,<0.14.0)",
    "tokenizers==0.22.2",
    "torch==2.12.0",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
]


dev = [
    "jupyterlab (>=4.5.6,<5.0.0)",
    "import-linter (>=2.11,<3.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "types-psycopg2 (>=2.9.21.20260422,<3.0.0.0)",
]
test = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-check (>=2.8.0,<3.0.0)",
    "pytest-postgresql (>=8.0.0,<9.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pandas-stubs (>=2.3.3.251201,<3.0.0.0)",
    "types-regex (>=2025.11.3.20251106,<2026.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "types-dateparser (>=1.3.0.20260211,<2.0.0.0)",
    "types-tqdm (>=4.67.3.20260508,<5.0.0.0)",
    "types-networkx (>=3.6.1.20260518,<4.0.0.0)",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "duckdb",
    "duckdb.*",
    "firebase_admin.*",
    "google.*",
    "scipy.*",
    "mwparserfromhell.*",
    "sklearn.*",
    "spacy.*",
    "cloudpathlib.*",
    "pymodulon.*",
    "adjustText.*",
    "joblib",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Add "PL" (Pylint) and "C90" (Complexity) to default rules
select = ["E", "F", "I", "PL", "C90"]
ignore = [
    "PLR2004",
    "PLR0911",
    "PLW2901",
    "PLR0913",
    "PLR0904",
    "PLR0124",
    "PLW0603",
    "PLW0177",
    "PLW0602",
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 5
max-public-methods = 20
max-statements = 50
max-branches = 15

[tool.ruff.lint.per-file-ignores]
"src/scripts/fix_jsonl.py" = ["PLR0402"]
"src/scripts/text_gemini_on_ner.py" = ["PLR0402"]
"src/scrapers/article/hardcoded/listawstydupo.py" = ["E501"]
"src/scrapers/article/hardcoded/kazdymusigdziespracowac.py" = ["E501"]
"src/stores/storage.py" = ["PLR0402"]

[tool.pytest.ini_options]
markers = ["parametrize_skip_if"]
# addopts = "--cov=src --cov-report=term:skip-covered --durations=5"
addopts = "--durations=5 --ff-group-by-module"

[tool.importlinter]
root_packages = ["analysis", "stores", "scrapers", "util", "entities"]

exclude_type_checking_imports = true
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Clean architecture"
type = "layers"
layers = ["analysis", "stores", "scrapers", "util", "entities"]
ignore_imports = ["scrapers.krs.scrape -> analysis.*"]

[[tool.importlinter.contracts]]
name = "Do not import external packages"
type = "forbidden"
source_modules = ["scrapers", "util", "entities"]

forbidden_modules = [
    "bz2",
    "csv",
    "duckdb.**",
    "duckdb",
    "firebase_admin.**",
    "firebase_admin",
    "fnmatch",
    "google.**",
    "google",
    "io",
    "os.**",
    "os",
    "shutil",
    "sys.**",
    "sys",
    "tempfile",
    "urllib.**",
    "urllib",
    "zipfile.**",
    "zipfile",
    "zipfile",
]
ignore_imports = [
    "scrapers.krs.scrape -> analysis.interesting",
    "scrapers.article.test_postgres_queue -> os",
    "scrapers.article.postgres_queue -> os",
    "scrapers.article.scripts.bench_crawl -> sys",
    "scrapers.article.scripts.bench_crawl -> os",
    "scrapers.article.scripts.bench_crawl -> io",
    "scrapers.article.scripts.bench_crawl -> csv",
    "scrapers.article.parse_runner -> csv",
    "entities.util -> urllib",
    "scrapers.stores -> io",
    # Created a quick export of library util.firestore
    "util.firestore -> firebase_admin",
    "util.firestore -> os",
    "util.firestore -> sys",
]
